ajout de nav bar

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <title>Superauto</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header class="tete">
-    <h1 class="titre-header">Superauto</h1>
-    <ul class="liste" style="list-style-type: none; display: inline-flex;">
-        <li>Accueil</li>
-        <li>Contact</li>
-        <li>A propos</li>
-    </ul>
-</header>
 <body>
+
+<nav class="bar">
+    <p class="titre">Superauto</p>
+    <div class="liste">
+        <ul class="nav-list">
+            <li class="item-navbar">Accueil</li>
+            <li class="item-navbar">A propos</li>
+            <li class="item-navbar">Contact</li>
+        </ul>
+    </div>
+</nav>
 </body>
 </html>
