--- a/index.html
+++ b/index.html
@@ -6,17 +6,26 @@
     <title>Superauto</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-<nav class="bar">
-    <p class="titre">Superauto</p>
-    <div class="liste">
-        <ul class="nav-list">
-            <li class="item-navbar">Accueil</li>
-            <li class="item-navbar">A propos</li>
-            <li class="item-navbar">Contact</li>
-        </ul>
-    </div>
-</nav>
+
+<body>
+    <header>
+        <nav class="bar">
+            <p class="titre">Superauto</p>
+            <div class="liste">
+                <ul class="nav-list">
+                    <li class="item-navbar">Accueil</li>
+                    <li class="item-navbar">A propos</li>
+                    <li class="item-navbar">Contact</li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+<div class="img-acc">
+    <img src="imgs/voiture-accueil.jpg" alt="" class="accueil-image">
+</div>
+
+
 </body>
 </html>
